Add view and routes to the blog app

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,17 @@
-<h1>Post of the user based on post id</h1>
+
+<section>
+  <h1>Post of the user based on post id</h1>
+  <div> 
+    <h3> <%=@post.title%> <span> by <%= @post.author.name%> </span></h3>
+    <div>
+      <span>Comments: <%=@post.comments_count%> </span>
+      <span>Likes: <%=@post.likes_count%> </span> 
+    </div>
+    <p> <%=@post.text%> </p>
+  </div>
+  <ul>
+  <%@post.comments.each do |comment|%>
+    <li><p> <span><%=comment.author.name %> :</span> <%=comment.text%>  </p></li>
+  <%end%>
+  </ul>
+</section>
