--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,26 @@
-<h1> Lists of Posts for a specific User </h1>
+<section>
+	<h1> Lists of Posts for a specific User </h1>
+	<div>
+		<img src=<%= @author.photo %> />
+		<h2><%=@author.name%></h2>
+    	<span> <%=@author.posts_count%> </span>
+	</div>
+	<ul>
+   <%@author.posts.each do |post|%>
+    <li> 
+      <div>
+        <h3><%=link_to post.title, user_post_path(@author, post)%></h3>
+        <p><%=post.text%></p>
+        <div>
+          <span> <%=post.comments_count%> </span>
+           <span> <%=post.likes_count%> </span>
+        </div>
+        <%post.recent_comments.each do |comment|%>
+          <li><p> <span><%=comment.author.name %> :</span> <%=comment.text%>  </p></li>
+        <%end%>
+      </div>
+    </li>
+    <%end%>
+  </ul>
+</section>
+
