--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,15 @@
-<h1>All users</h1>
+
+<section>
+  <h1>All users</h1>
+  <ul> 
+    <% @users.each do |user| %>
+      <li> 
+        <img src=<%= user.photo %> />
+        <div>
+          <h3><%= link_to user.name, user_path(user) %> </h3>
+          <span><%= user.posts_count %></span>
+        </div>
+      </li>
+    <% end %>
+  </ul>
+</section>
