Integration test and n+1 query

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,6 @@
 <div style="width: 100vw; height: 50vh; display: flex; justify-content: center; align-items:center">
   <h1> Welcome to The Blogs ...</h1>
+  <ul>
+    <li><%=link_to 'Users', users_path%></li>
+  </ul>
 </div
