--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,5 @@
-
 <section> 
-  <h1>User based on user id</h1>
+  <h1> A specific user based on user id </h1>
   <div>
     <img src=<%= @author.photo %> />
     <div>
@@ -12,7 +11,7 @@
   <ul>
     <%@author.recent_posts.each do |post|%>
       <li>
-        <h3><%=post.title %></h3>
+        <h3><%= link_to post.title, user_all_posts_path(@author, post) %></h3>
         <p><%=post.text%></p>
         <div>
           <span> <%=post.comments_count%> </span>
@@ -21,5 +20,6 @@
       </li>
     <%end%>
   </ul>
-  <%= link_to "See all posts", user_posts_path(@author)%>
+  <button><%= link_to "See all posts", user_recent_posts_path(@author)%></button>
+  <button><%= link_to 'Create new post', new_post_path(@user)%></button>
 </section>
