--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <div style="width: 100vw; height: 50vh; display: flex; justify-content: center; align-items:center">
   <h1> Welcome to The Blogs ...</h1>
   <ul>
-    <li><%=link_to 'Users', users_path%></li>
+    <li class="btn btn-primary btn-lg"><%=link_to 'Sign up', '/users/sign_up', class:"text-white"%></li>
+    <li class="btn btn-success btn-lg"><%=link_to 'Log In', '/users/sign_in', class: "text-white"%></li>
   </ul>
 </div
