--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,5 +3,6 @@
   <ul>
     <li class="btn btn-primary btn-lg"><%=link_to 'Sign up', '/users/sign_up', class:"text-white"%></li>
     <li class="btn btn-success btn-lg"><%=link_to 'Log In', '/users/sign_in', class: "text-white"%></li>
+    <li class="btn btn-secondary btn-lg"><%=link_to 'Users', '/users', class: "text-white"%></li>
   </ul>
 </div
