--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <% if user_signed_in? %>
+     <button class="btn btn-warning"> <%=link_to('Logout', destroy_user_session_path, :method => 'delete')%> </button>
+    <%end%>
     <%= yield %>
   </body>
 </html>
