Add api endpoint

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,46 @@
  *= require_tree .
  *= require_self
  */
+
+body,
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+img {
+  width: 250px;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+}
+
+ul > li {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+}
+
+section.login-form,
+section.signup-form {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+form {
+  width: 65%;
+}
+
+button {
+  width: max-content;
+}
